# stock_reason

./: .gitignore  README.md
backend/: .env.example  .gitignore  README.md  migrate.py  pyproject.toml  requirements.txt  run.py
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/: api.py  deps.py
backend/app/api/endpoints/: events.py  stocks.py
backend/app/core/: config.py
backend/app/crud/: __init__.py  event.py  stock.py
backend/app/db/: base.py  base_class.py  init_db.py  session.py
backend/app/db/models/: event.py  price.py  stock.py
backend/app/llm/: news_analyzer.py
backend/app/mock_data/: __init__.py  events.py  split_events.py  stocks.py
backend/app/mock_data/data/: events.json
backend/app/mock_data/data/stocks/: AAPL.json  AMZN.json  BABA.json  MSFT.json  TSLA.json
backend/app/schemas/: event.py  stock.py
backend/app/services/: event_service.py  stock_service.py
backend/app/utils/: csv_utils.py  time.py
backend/getdata/: yahoo.py
frontend/: .gitignore  README.md  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.test.tsx  App.tsx  index.css  index.tsx  setupTests.ts
frontend/src/context/: ThemeContext.tsx
frontend/src/hooks/: useChartResize.ts  useEventFiltering.ts  useWindowSize.ts
frontend/src/services/: api.ts  corsproxy.ts
frontend/src/styles/: App.css  EventDetail.css  SearchBar.css  Timeline.css  index.css
frontend/src/types/: index.ts
frontend/src/utils/: mockData.ts
proxy-server/: README.md  index.js  package-lock.json  package.json  test-proxy.js
(+23 files in other folders)
